--- a/css/main.css
+++ b/css/main.css
@@ -48,12 +48,15 @@ header .container {
 /* ======================================================= */
 
 main .inicio {
-    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)100%), url("../img/342842_original.webp");
+    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)100%), url("../img/parmegiana.jpg");
     color: white;
     font-size: 17px;
 
     height: 400px ;
     background-size: cover;
+    background-position: right;
+    background-repeat: no-repeat;
+    border: none;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -74,7 +77,7 @@ main .inicio {
 }
 
 main .container{
-    width: 70%;
+    width: 60%;
     margin-top: 40px;
 }
 
@@ -83,8 +86,23 @@ main .container{
     font-family: 'Times New Roman', Times, serif;
     display: flex;
     justify-content: space-between;
-    margin-right: 80px;
+    margin-right: 8px;
 }
+
+.avaliacao b{
+    font-family: "arial black";
+    font-size: 15px;
+}
+
+.container .estrela{
+    color: gold;
+}
+
+
+.container .tempo {
+    color: turquoise;
+}
+
 
 .container .botao1{
     margin-right: 50px;
@@ -105,6 +123,7 @@ main .container{
     color:#141414;
     cursor: pointer;
     background-color: white;
+    transition: .4s ease all;
 }
 
 .container .turtorial i{
@@ -119,29 +138,42 @@ main .container{
     font-size: 20px;
     font-family: "arial black", arial;
     text-decoration: none;
+    align-items: center;
 }
 
 .mais:hover{
     background-color: #fff;
     color: #141414;
+    transition: .4s ease all;
+}
+
+.mais i{
+    margin-left: 8px;
+}
+
+ .barra{
+    margin-right: 30px;
 }
 
                     /*CARROSEL CONFIG*/
 .item{
-    weight: 100%;
+    height: 100%;
     width: 100%;
     display: 100%;
 }
 
 .item:hover{
     cursor: pointer;
+    height: border;
 
 }
 
 .carrosel {
     margin-top: 5px;
+    margin-bottom: 20px;
 }
 
-.img1:hover{
-    background-color: #e50914;
+.item .a:hover{
+    background-color: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)100%);
+    color: rgba(0, 0, 0, .5);
 }
